// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Showing correct entity settings renders 1`] = `
<body>
  <div>
    <div
      class="ClusterManager"
    >
      <div
        class="topBar"
      >
        <div
          class="items"
        >
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="home-button"
            >
              <span
                class="icon"
                data-icon-name="home"
              >
                home
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-back"
            >
              <span
                class="icon"
                data-icon-name="arrow_back"
              >
                arrow_back
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-forward"
            >
              <span
                class="icon"
                data-icon-name="arrow_forward"
              >
                arrow_forward
              </span>
            </i>
          </div>
          <div
            class="separator"
          />
        </div>
      </div>
      <main>
        <div
          id="lens-views"
        />
        <div
          class="flex justify-center Welcome align-center"
          data-testid="welcome-page"
        >
          <div
            data-testid="welcome-banner-container"
            style="width: 320px;"
          >
            <i
              class="Icon logo svg focusable"
            >
              <span
                class="icon"
              />
            </i>
            <div
              class="flex justify-center"
            >
              <div
                data-testid="welcome-text-container"
                style="width: 320px;"
              >
                <h2>
                  Welcome to some-product-name!
                </h2>
                <p>
                  To get you started we have auto-detected your clusters in your
                   
                  kubeconfig file and added them to the catalog, your centralized
                   
                  view for managing all your cloud-native resources.
                  <br />
                  <br />
                  If you have any questions or feedback, please join our 
                  <a
                    class="link"
                    href="https://join.slack.com/t/k8slens/shared_invite/zt-wcl8jq3k-68R5Wcmk1o95MLBE5igUDQ"
                    rel="noreferrer"
                    target="_blank"
                  >
                    Lens Community slack channel
                  </a>
                  .
                </p>
                <ul
                  class="block"
                  data-testid="welcome-menu-container"
                  style="width: 320px;"
                >
                  <li
                    class="flex grid-12"
                  >
                    <i
                      class="Icon box col-1 material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="view_list"
                      >
                        view_list
                      </span>
                    </i>
                    <a
                      class="box col-10"
                    >
                      Browse Clusters in Catalog
                    </a>
                    <i
                      class="Icon box col-1 material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="navigate_next"
                      >
                        navigate_next
                      </span>
                    </i>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </main>
      <div
        class="HotbarMenu flex column"
      >
        <div
          class="HotbarItems flex column gaps"
        />
        <div
          class="HotbarSelector"
        >
          <i
            class="Icon Icon previous material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_left"
            >
              arrow_left
            </span>
          </i>
          <div
            class="HotbarIndex"
          >
            <div
              class="badge Badge small clickable"
              id="hotbarIndex"
            >
              0
            </div>
          </div>
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_right"
            >
              arrow_right
            </span>
          </i>
        </div>
      </div>
      <div
        class="StatusBar"
        data-testid="status-bar"
      >
        <div
          class="leftSide"
          data-testid="status-bar-left"
        />
        <div
          class="rightSide"
          data-testid="status-bar-right"
        />
      </div>
    </div>
    <div
      class="Notifications flex column align-flex-end"
    />
  </div>
</body>
`;

exports[`Showing correct entity settings when navigating to local cluster entity settings renders 1`] = `
<body>
  <div>
    <div
      class="ClusterManager"
    >
      <div
        class="topBar"
      >
        <div
          class="items"
        >
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive focusable"
              data-testid="home-button"
              tabindex="0"
            >
              <span
                class="icon"
                data-icon-name="home"
              >
                home
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-back"
            >
              <span
                class="icon"
                data-icon-name="arrow_back"
              >
                arrow_back
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-forward"
            >
              <span
                class="icon"
                data-icon-name="arrow_forward"
              >
                arrow_forward
              </span>
            </i>
          </div>
          <div
            class="separator"
          />
        </div>
      </div>
      <main>
        <div
          id="lens-views"
        />
        <div
          class="SettingLayout showNavigation"
          data-testid="entity-settings"
        >
          <nav
            class="sidebarRegion"
          >
            <div
              class="sidebar"
            >
              <div
                class="avatarAndName"
              >
                <div
                  class="Avatar rounded settingsAvatar"
                  style="width: 40px; height: 40px; background: rgb(83, 137, 8);"
                >
                  slk
                </div>
                <div
                  class="entityName"
                >
                  some-local-kubernetes-cluster
                </div>
              </div>
              <div
                class="Tabs flex column"
              >
                <hr />
                <div
                  class="header"
                >
                  Settings
                </div>
                <div
                  class="Tab flex gaps align-center active"
                  data-testid="general-tab"
                  role="tab"
                  tabindex="0"
                >
                  <div
                    class="label"
                  >
                    General
                  </div>
                </div>
                <div
                  class="Tab flex gaps align-center"
                  data-testid="proxy-tab"
                  role="tab"
                  tabindex="0"
                >
                  <div
                    class="label"
                  >
                    Proxy
                  </div>
                </div>
                <div
                  class="Tab flex gaps align-center"
                  data-testid="terminal-tab"
                  role="tab"
                  tabindex="0"
                >
                  <div
                    class="label"
                  >
                    Terminal
                  </div>
                </div>
                <div
                  class="Tab flex gaps align-center"
                  data-testid="namespace-tab"
                  role="tab"
                  tabindex="0"
                >
                  <div
                    class="label"
                  >
                    Namespace
                  </div>
                </div>
                <div
                  class="Tab flex gaps align-center"
                  data-testid="metrics-tab"
                  role="tab"
                  tabindex="0"
                >
                  <div
                    class="label"
                  >
                    Metrics
                  </div>
                </div>
                <div
                  class="Tab flex gaps align-center"
                  data-testid="node-shell-tab"
                  role="tab"
                  tabindex="0"
                >
                  <div
                    class="label"
                  >
                    Node Shell
                  </div>
                </div>
              </div>
            </div>
          </nav>
          <div
            class="contentRegion"
            id="ScrollSpyRoot"
          >
            <div
              class="content"
            >
              <section>
                <h2
                  data-testid="general-header"
                >
                  General
                </h2>
                <section />
              </section>
            </div>
            <div
              class="toolsRegion"
            >
              <div
                class="fixed top-[60px]"
              >
                <div>
                  <div
                    aria-label="Close"
                    class="closeButton"
                    role="button"
                  >
                    <i
                      class="Icon icon material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="close"
                      >
                        close
                      </span>
                    </i>
                  </div>
                  <div
                    aria-hidden="true"
                    class="esc"
                  >
                    ESC
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </main>
      <div
        class="HotbarMenu flex column"
      >
        <div
          class="HotbarItems flex column gaps"
        />
        <div
          class="HotbarSelector"
        >
          <i
            class="Icon Icon previous material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_left"
            >
              arrow_left
            </span>
          </i>
          <div
            class="HotbarIndex"
          >
            <div
              class="badge Badge small clickable"
              id="hotbarIndex"
            >
              0
            </div>
          </div>
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_right"
            >
              arrow_right
            </span>
          </i>
        </div>
      </div>
      <div
        class="StatusBar"
        data-testid="status-bar"
      >
        <div
          class="leftSide"
          data-testid="status-bar-left"
        />
        <div
          class="rightSide"
          data-testid="status-bar-right"
        />
      </div>
    </div>
    <div
      class="Notifications flex column align-flex-end"
    />
  </div>
</body>
`;

exports[`Showing correct entity settings when navigating to non-local cluster entity settings renders 1`] = `
<body>
  <div>
    <div
      class="ClusterManager"
    >
      <div
        class="topBar"
      >
        <div
          class="items"
        >
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive focusable"
              data-testid="home-button"
              tabindex="0"
            >
              <span
                class="icon"
                data-icon-name="home"
              >
                home
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-back"
            >
              <span
                class="icon"
                data-icon-name="arrow_back"
              >
                arrow_back
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-forward"
            >
              <span
                class="icon"
                data-icon-name="arrow_forward"
              >
                arrow_forward
              </span>
            </i>
          </div>
          <div
            class="separator"
          />
        </div>
      </div>
      <main>
        <div
          id="lens-views"
        />
        <div
          class="SettingLayout showNavigation"
          data-testid="entity-settings"
        >
          <nav
            class="sidebarRegion"
          >
            <div
              class="sidebar"
            >
              <div
                class="avatarAndName"
              >
                <div
                  class="Avatar rounded settingsAvatar"
                  style="width: 40px; height: 40px; background: rgb(9, 124, 92);"
                >
                  skc
                </div>
                <div
                  class="entityName"
                >
                  some-kubernetes-cluster
                </div>
              </div>
              <div
                class="Tabs flex column"
              >
                <hr />
                <div
                  class="header"
                >
                  Settings
                </div>
                <div
                  class="Tab flex gaps align-center active"
                  data-testid="proxy-tab"
                  role="tab"
                  tabindex="0"
                >
                  <div
                    class="label"
                  >
                    Proxy
                  </div>
                </div>
                <div
                  class="Tab flex gaps align-center"
                  data-testid="terminal-tab"
                  role="tab"
                  tabindex="0"
                >
                  <div
                    class="label"
                  >
                    Terminal
                  </div>
                </div>
                <div
                  class="Tab flex gaps align-center"
                  data-testid="namespace-tab"
                  role="tab"
                  tabindex="0"
                >
                  <div
                    class="label"
                  >
                    Namespace
                  </div>
                </div>
                <div
                  class="Tab flex gaps align-center"
                  data-testid="metrics-tab"
                  role="tab"
                  tabindex="0"
                >
                  <div
                    class="label"
                  >
                    Metrics
                  </div>
                </div>
                <div
                  class="Tab flex gaps align-center"
                  data-testid="node-shell-tab"
                  role="tab"
                  tabindex="0"
                >
                  <div
                    class="label"
                  >
                    Node Shell
                  </div>
                </div>
              </div>
            </div>
          </nav>
          <div
            class="contentRegion"
            id="ScrollSpyRoot"
          >
            <div
              class="content"
            >
              <section>
                <h2
                  data-testid="proxy-header"
                >
                  Proxy
                </h2>
                <section>
                  <section>
                    <div
                      class="SubTitle"
                      id="http-proxy"
                    >
                      HTTP Proxy
                       
                    </div>
                    <div
                      class="Input theme round black"
                    >
                      <label
                        class="input-area flex gaps align-center"
                        id=""
                      >
                        <input
                          class="input box grow"
                          placeholder="http://<address>:<port>"
                          spellcheck="false"
                          value=""
                        />
                      </label>
                      <div
                        class="input-info flex gaps"
                      />
                    </div>
                    <small
                      class="hint"
                    >
                      HTTP Proxy server. Used for communicating with Kubernetes API.
                    </small>
                  </section>
                </section>
              </section>
            </div>
            <div
              class="toolsRegion"
            >
              <div
                class="fixed top-[60px]"
              >
                <div>
                  <div
                    aria-label="Close"
                    class="closeButton"
                    role="button"
                  >
                    <i
                      class="Icon icon material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="close"
                      >
                        close
                      </span>
                    </i>
                  </div>
                  <div
                    aria-hidden="true"
                    class="esc"
                  >
                    ESC
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </main>
      <div
        class="HotbarMenu flex column"
      >
        <div
          class="HotbarItems flex column gaps"
        />
        <div
          class="HotbarSelector"
        >
          <i
            class="Icon Icon previous material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_left"
            >
              arrow_left
            </span>
          </i>
          <div
            class="HotbarIndex"
          >
            <div
              class="badge Badge small clickable"
              id="hotbarIndex"
            >
              0
            </div>
          </div>
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_right"
            >
              arrow_right
            </span>
          </i>
        </div>
      </div>
      <div
        class="StatusBar"
        data-testid="status-bar"
      >
        <div
          class="leftSide"
          data-testid="status-bar-left"
        />
        <div
          class="rightSide"
          data-testid="status-bar-right"
        />
      </div>
    </div>
    <div
      class="Notifications flex column align-flex-end"
    />
  </div>
</body>
`;

exports[`Showing correct entity settings when navigating to weblink entity settings renders 1`] = `
<body>
  <div>
    <div
      class="ClusterManager"
    >
      <div
        class="topBar"
      >
        <div
          class="items"
        >
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive focusable"
              data-testid="home-button"
              tabindex="0"
            >
              <span
                class="icon"
                data-icon-name="home"
              >
                home
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-back"
            >
              <span
                class="icon"
                data-icon-name="arrow_back"
              >
                arrow_back
              </span>
            </i>
          </div>
          <div
            class="size-sm"
          />
          <div
            class="preventedDragging"
          >
            <i
              class="Icon material interactive disabled focusable"
              data-testid="history-forward"
            >
              <span
                class="icon"
                data-icon-name="arrow_forward"
              >
                arrow_forward
              </span>
            </i>
          </div>
          <div
            class="separator"
          />
        </div>
      </div>
      <main>
        <div
          id="lens-views"
        />
        <div
          class="SettingLayout showNavigation"
          data-testid="entity-settings"
        >
          <nav
            class="sidebarRegion"
          >
            <div
              class="sidebar"
            >
              <div
                class="avatarAndName"
              >
                <div
                  class="Avatar rounded settingsAvatar"
                  style="width: 40px; height: 40px; background: rgb(53, 8, 142);"
                >
                  sw
                </div>
                <div
                  class="entityName"
                >
                  some-weblink
                </div>
              </div>
              <div
                class="Tabs flex column"
              />
            </div>
          </nav>
          <div
            class="contentRegion"
            id="ScrollSpyRoot"
          >
            <div
              class="content"
            >
              <div
                class="flex items-center"
                data-preference-page-does-not-exist-test="true"
              >
                No settings found for
                 
                entity.k8slens.dev/v1alpha1
                /
                WebLink
              </div>
            </div>
            <div
              class="toolsRegion"
            >
              <div
                class="fixed top-[60px]"
              >
                <div>
                  <div
                    aria-label="Close"
                    class="closeButton"
                    role="button"
                  >
                    <i
                      class="Icon icon material focusable"
                    >
                      <span
                        class="icon"
                        data-icon-name="close"
                      >
                        close
                      </span>
                    </i>
                  </div>
                  <div
                    aria-hidden="true"
                    class="esc"
                  >
                    ESC
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </main>
      <div
        class="HotbarMenu flex column"
      >
        <div
          class="HotbarItems flex column gaps"
        />
        <div
          class="HotbarSelector"
        >
          <i
            class="Icon Icon previous material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_left"
            >
              arrow_left
            </span>
          </i>
          <div
            class="HotbarIndex"
          >
            <div
              class="badge Badge small clickable"
              id="hotbarIndex"
            >
              0
            </div>
          </div>
          <i
            class="Icon material interactive focusable"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="arrow_right"
            >
              arrow_right
            </span>
          </i>
        </div>
      </div>
      <div
        class="StatusBar"
        data-testid="status-bar"
      >
        <div
          class="leftSide"
          data-testid="status-bar-left"
        />
        <div
          class="rightSide"
          data-testid="status-bar-right"
        />
      </div>
    </div>
    <div
      class="Notifications flex column align-flex-end"
    />
  </div>
</body>
`;
